style: spacing is now fixed for macbook

--- a/src/Sass/landingPage.scss
+++ b/src/Sass/landingPage.scss
@@ -79,10 +79,6 @@ $laptop: 1440px;
 }
 
 @media screen and (min-width: $laptop) {
-  .product-container {
-    height: 1000px;
-    margin-top: 0px;
-  }
   .container {
     .cpx-container {
       width: 50%;
