--- a/src/Sass/productPage.scss
+++ b/src/Sass/productPage.scss
@@ -108,7 +108,7 @@ $laptop: 1280px;
       width: 60%;
       margin-bottom: 100px;
       #contact-heading {
-        margin-top: 250px;
+        margin-top: 90px;
       }
 
       .input-container {
